added required fields to inputs

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -64,9 +64,9 @@
                 <% } %>
                 </select>
                 <label class="text">Amount:</label>
-                <input type="text" name="coinAmount" class="form-control curved">
+                <input type="text" required name="coinAmount" class="form-control curved">
                 <label class="text">Purchase Date:</label>
-                <input type="date" name="datePurchased" class="form-control curved">
+                <input type="date" required name="datePurchased" class="form-control curved">
                 <div style="float: right; margin-top: 1rem;">
                     <button class="curved btn btn-md btn-outline-success min-size-2" >Add</button>
                     <button id="close-add-form" class="curved btn btn-md btn-outline-danger"" type="button">Cancel</button>
@@ -85,7 +85,7 @@
                 <% } %>
                 </select>
                 <label class="text">Amount:</label>
-                <input type="text" name="coinAmount" class="form-control curved">
+                <input type="text" required name="coinAmount" class="form-control curved">
                 <div style="float: right; margin-top: 1rem;">
                     <button class="curved btn btn-md btn-outline-danger min-size-2" >Remove</button>
                     <button id="close-remove-form" class="curved btn btn-md btn-outline-success"" type="button">Cancel</button>
