--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -64,7 +64,7 @@
                 <% } %>
                 </select>
                 <label class="text">Amount:</label>
-                <input type="text" required name="coinAmount" class="form-control curved">
+                <input type="number" required name="coinAmount" class="form-control curved">
                 <label class="text">Purchase Date:</label>
                 <input type="date" required name="datePurchased" class="form-control curved">
                 <div style="float: right; margin-top: 1rem;">
@@ -85,7 +85,7 @@
                 <% } %>
                 </select>
                 <label class="text">Amount:</label>
-                <input type="text" required name="coinAmount" class="form-control curved">
+                <input type="number" required name="coinAmount" class="form-control curved">
                 <div style="float: right; margin-top: 1rem;">
                     <button class="curved btn btn-md btn-outline-danger min-size-2" >Remove</button>
                     <button id="close-remove-form" class="curved btn btn-md btn-outline-success"" type="button">Cancel</button>
